代码优化
Signed-off-by: GitAntinus <gantinus@gmail.com>